<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Olveczky Lab Signatures</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Clear">Clear</string>
    <string name="Export">Export</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>
    <string name="six">six</string>
    <string name="Presenter">Presenter</string>
    <string name="title_activity_present">PresentActivity</string>
    <string name="title_activity_presentor">PresentorActivity</string>
    <string name="title_activity_presenter">PresenterActivity</string>
    <string name="title_activity_analysis">AnalysisActivity</string>
    <string name="Draw">Draw</string>
    <string name="Analysis">Analysis</string>
    <string name="button_XandTime">Plot X vs Time</string>
    <string name="button_YandTime">Plot Y vs time</string>
    <string name="title_activity_presentation">PresentationActivity</string>
    <string name="title_activity_utilities">Utilities</string>

</resources>
